<resources>
    <string name="app_name">MeteoInfoWeather</string>
    <string name="action_settings">Hacтройки</string>
    <string name="action_about">О программе</string>
    <string name="action_restart">Обновление вручную</string>
    <string name="no_server_conn">Нет связи с сервером</string>
    <string name="weather_data">Данные и прогнозы</string>
    <string name="data_obtained_processed">Данные получены и обработаны</string>
    <string name="data_process_error">Ошибка при обработке данных</string>
    <string name="current_location">Для текущего местонахождения</string>
    <string name="select_loc_by_name">По названию ближайшей станции</string>
    <string name="select_loc_by_coord">По координатам ближайшей станции</string>
    <string name="conn_bad">Нет связи с сервером! Проверьте настройки Internet и попробуйте еще раз</string>
    <string name="conn_ok">Инициализация прошла успешно</string>
    <string name="no_internet">Нет подключения к Internet!</string>
    <string name="title_data_activity">Почасовой прогноз</string>
    <string name="failed_to_find_loc">Не удалось найти текущие координаты</string>
    <string name="sel_pattern">Введите несколько букв названия места:</string>
    <string name="sel_coord">Введите координаты места:</string>
    <string name="short_patt">Слишком мало букв для поиска</string>
    <string name="okey">Далее</string>
    <string name="srv_running">Сервис уже запущен</string>
    <string name="patt_no_match">Для введенной строки станций не найдено</string>
    <string name="cancel">Отмена</string>
    <string name="receiving_stl">Получение списка станций</string>
    <string name="act_data">Прогноз погоды на неделю</string>
    <string name="all_data">Подробный прогноз погоды</string>
    <string name="observ_data">Наблюдения за последние 6 часов</string>
    <string name="daily_data">Почасовой прогноз на 3 дня</string>
    <string name="weekly_data">Недельный прогноз</string>
    <string name="weekly_data2">Общий прогноз</string>
    <string name="no_data_avail">Нет данных</string>
    <string name="latitude">Широта:</string>
    <string name="longitude">Долгота:</string>
    <string name="sta_ll_fmt">[ш/д=%.4f/%.4f, %s]</string>
    <string name="map_google">Посмотреть на картах Google</string>
    <string name="map_osm">Посмотреть на картах OSM</string>
    <string name="map_yandex">Посмотреть на картах Yandex</string>
    <string name="inv_coords">Недопустимые координаты</string>
    <string name="try_find_coords">Поиск ближайшей станции&#8230;</string>
    <string name="try_google">Дополнительные данные от Google&#8230;</string>
    <string name="try_osm">Дополнительные данные OSM&#8230;</string>
    <string name="station">Станция</string>
    <string name="sta_changed">Станция изменилась на</string>
    <string name="country">Страна</string>
    <string name="name">Название</string>
    <string name="failed">Сбой связи с сервером</string>
    <string name="op_in_progress">Операция выполняется. Нажмите кнопку Назад для отмены</string>
    <string name="receiving_data">Прием данных</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="pref_use_russian">Русский язык</string>
    <string name="pref_verbose">Информация в главном окне</string>
    <string name="pref_base_settings">Основные настройки</string>
    <string name="pref_widget_settings">Настройки виджета</string>
    <string name="pref_addr_source">Доп. данные о местонахождении</string>
    <string name="pref_use_offline_maps">Офлайн-карты, если есть</string>
    <string name="pref_use_gps">Использовать GPS</string>
    <string name="pref_use_interp">Детализация прогнозов</string>
    <string name="pref_use_geonames">Точные данные о временных зонах</string>
    <string name="pref_loc_updates">Интервал обновления координат</string>
    <string name="pref_wth_updates">Интервал обновления погоды</string>
    <string name="pref_bgr_service">Фоновый сервис</string>
    <string name="no_offline_maps">Нужные офлайн-карты не найдены</string>
    <string name="using_offline_maps">Переключение на офлайн-карты</string>
    <string name="no_station">Ошибка: станция не найдена</string>
    <string name="using_cached">Данные о ближайшей станции взяты из кеша</string>
    <string name="select_fav">Для сохраненных станций</string>
    <string name="add_to_fav">Сохранить станцию</string>
    <string name="title_activity_maps">Карта</string>
    <string name="added">Сохранено.</string>
    <string name="sta_loc">Станция</string>
    <string name="cur_loc">Местонахождение</string>
    <string name="cur_loc_known">Местонахождение известно</string>
    <string name="dist">Расстояние: ок.</string>
    <string name="info">Секундочку&#8230;</string>
    <string name="nav_header_title">Гидрометцентр РФ</string>
    <string name="nav_header_subtitle">ПОГОДА:</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sta_unchanged">Cписок станций не изменился</string>
    <string name="retr_sta_list">Получение списка станций</string>
    <string name="bzip2_rec_failure">Не удалось получить список</string>
    <string name="bzip2_dec_failure">Не удалось распаковать список</string>
    <string name="bzip2_rec_ok">Список получен (%.2f Кб/с)</string>
    <string name="bzip2_dec_ok">Список распакован: %s -> %s байт</string>
    <string name="err_read_sta">Ошибка чтения списка станций</string>
    <string name="empty_sta_list">Список станций пустой</string>
    <string name="good_read_sta">Число станций: %d</string>
    <string name="cur_coord">Lat=%.7f Lon=%.7f</string>
    <string name="inv_sta_data">Неверный формат данных на строке </string>
    <string name="err_exception">Ошибка: плохая связь или некорректные данные</string>
    <string name="err_google">Ошибка в ответе от Google</string>
    <string name="null_coords">Недопустимые координаты</string>
    <string name="inv_last_coords">Исключение в getLastLocation</string>
    <string name="err_in">Ошибка в</string>
    <string name="query_md5">Опрос md5 от сервера</string>
    <string name="parse_list">Анализ списка станций</string>
    <string name="skip_kiev">Станция 16169 пропущена</string>
    <string name="found_sta_info">Адрес найден:</string>
    <string name="fav_removal">Удаление из избранного</string>
    <string name="launch_webpage">Переход на web-страницу</string>
    <string name="add_new_fav">Сохранение в избранное</string>
    <string name="launch_gmaps">Запуск Google Maps</string>
    <string name="launch_osmaps">Запуск OSM</string>
    <string name="launch_ymaps">Запуск Yandex Maps</string>
    <string name="read_timeout">время ожидания истекло</string>
    <string name="no_cur_sta">Станция неизвестна</string>
    <string name="conn_slow">Слишком медленное соединение</string>
    <string name="loc_unk_yet">Поиск координат&#8230;</string>
    <string name="received_in">получено за</string>
    <string name="night">ночью</string>
    <string name="day">днем</string>
    <string name="empty_string">Пустая строка</string>
    <string name="query_weather_data">Опрос погодных данных для станции </string>
    <string name="no_weather_data">Нет данных для станции </string>
    <string name="weather_data_cached">Данные для станции уже в кеше</string>
    <string name="observed_data_okay">Данные текущих наблюдений получены</string>
    <string name="hourly_data_okay">Данные почасового прогноза получены</string>
    <string name="weekly_data_okay">Данные недельного прогноза получены</string>
    <string name="observed_data_bad">Нет данных текущих наблюдений</string>
    <string name="hourly_data_bad">Нет данных почасового прогноза</string>
    <string name="weekly_data_bad">Нет данных недельного прогноза</string>
    <string name="empty_elem_skiped">пустой элемент списка пропущен</string>
    <string name="wd_temperature">Температура: %.1f°C</string>
    <string name="wd_celsius">°C</string>
    <string name="wd_pressure">Давление: %.1f мм рт.ст.</string>
    <string name="wd_wind_nogusts">Ветер: %s [%.1f°] %.1f м/с</string>
    <string name="wd_wind_gusts">Ветер: %s [%.1f°] %.1f м/с, порывы до %.1f м/с</string>
    <string name="wd_wind_nogusts1">Ветер: %s, %.1f м/с</string>
    <string name="wd_wind_gusts1">Ветер: %s, %.1f м/с, порывы до %.1f м/с</string>
    <string name="wd_precip_nd">Осадки за ночь/день: %.1f мм</string>
    <string name="wd_precip1h">Осадки за 1 час: %.1f мм</string>
    <string name="wd_precip3h">Осадки за 3 часа: %.1f мм</string>
    <string name="wd_precip6h">Осадки за 6 часов: %.1f мм</string>
    <string name="wd_precip12h">Осадки за 12 часов: %.1f мм</string>
    <string name="wd_humidity">Относительная влажность: %.1f%%</string>
    <string name="wd_visibility_km">Видимость: %d км</string>
    <string name="wd_visibility_m">Видимость: %d м</string>
    <string name="wd_clouds">Балл общей облачности (0&#8211;10): %d</string>
    <string name="too_windy">Слишком ветрено: от %.1f до %.1f</string>
    <string name="wd_md">День/месяц</string>
    <string name="wd_wind_short">Ветер: %s, %.1f м/с</string>
    <string name="wd_precip_short">Осадки: %.1f мм/ч</string>
    <string name="wd_humidity_short">Влажность: %.1f%%</string>
    <string name="wd_pressure_units">ммРт</string>
    <string name="wd_pressure_short_hg">Давление: %d мм рт.ст.</string>
    <string name="wd_sta_short">Станция %d</string>
    <string name="wd_unk_temp">T,°C</string>
    <string name="w_transp">Прозрачность</string>
    <string name="w_red">Красный</string>
    <string name="w_green">Зеленый</string>
    <string name="w_blue">Синий</string>
    <string name="wd_forecast">[П]</string>
    <string name="wd_observ">[Н]</string>
    <string name="wd_precip_3h">[3ч]</string>
    <string name="wd_precip_6h">[6ч]</string>
    <string name="wd_precip_12h">[12ч]</string>
    <string name="wd_font_colour">Цвет текста</string>
    <string name="wd_back_colour">Цвет фона</string>
    <string name="wd_bfont_colour">Цвет текста кнопок</string>
    <string name="wd_bback_colour">Цвет фона кнопок</string>
    <string name="wd_show_sta">Номер станции</string>
    <string name="email_subject">О программе/виджете под Android</string>
    <string name="srv_weather_update">Обновление данных о погоде</string>
    <string name="srv_loc_update">Новые данные о местонахождении</string>
    <string name="srv_created">Сервис запущен, виджет=</string>
    <string name="srv_sta_list_proc">Список станций обработан</string>
    <string name="weather_code">Код погоды:</string>
    <string name="go_back">Назад</string>
    <string name="to_app">В программу</string>
    <string name="restart_on_kill">Сервис был остановлен, перезапускаю&#8230;</string>
    <string name="okay">OK</string>
    <string-array name="verb_names">
	<item>Ошибки</item>
	<item>Ошибки и еще кое-что</item>
	<item>Все</item>
    </string-array>
    <string-array name="addr_names">
	<item>Нет</item>
	<item>Google</item>
	<item>OSM</item>
    </string-array>
    <string-array name="vals123">
	<item>0</item>
	<item>1</item>
	<item>2</item>
    </string-array>
    <string-array name="loc_update_names">
	<item>10 секунд</item>
	<item>1 минута</item>
	<item>5 минут</item>
	<item>20 минут</item>
	<item>1 час</item>
    </string-array>
    <string-array name="loc_update_vals">
	<item>10</item>
	<item>60</item>
	<item>300</item>
	<item>1200</item>
	<item>3600</item>
    </string-array>
    <string-array name="wth_update_names">
	<item>5 минут</item>
	<item>20 минут</item>
	<item>1 час</item>
	<item>2 часа</item>
	<item>4 часа</item>
    </string-array>
    <string-array name="wth_update_vals">
	<item>300</item>
	<item>1200</item>
	<item>3600</item>
	<item>7200</item>
	<item>14400</item>
    </string-array>
</resources>