<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

<!--
    xmlns:app="http://schemas.android.com/apk/res-auto"	
-->

    <group android:checkableBehavior="all" android:title="@string/weather_data" 
	android:id="@+id/group_feature2">
        <item
            android:id="@+id/cur_loc"
            android:title="@string/current_location"
	/>
        <item
            android:id="@+id/sel_loc"
            android:title="@string/select_loc_by_name" 
        />
        <item
            android:id="@+id/sel_coord"
            android:title="@string/select_loc_by_coord" 
	/>
        <item
            android:id="@+id/sel_fav"
            android:title="@string/select_fav" 
	/>
    </group>	

</menu>
