<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/launch_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine" />
<!--    android:ems="10" -->
    <Button
        android:id="@+id/act_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/act_data" />
<!--

    <Button
        android:id="@+id/data_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/all_data" />
-->
    <Button
        android:id="@+id/add_to_fav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_to_fav" />
    <Button
        android:id="@+id/view_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/map_google" />
<!--
    <Button
        android:id="@+id/view_osm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/map_osm" />
    <Button
        android:id="@+id/view_yandex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/map_yandex" />
-->

</LinearLayout>
